# ilml

./: .gitignore  geometry_impact_check.ipynb  package-lock.json  pyproject.toml
examples/: viscosity.py
src/ilml/: __init__.py  chemistry.py  dataset.py  entry.py  exceptions.py  memory.py
src/ilml/featurization/: __init__.py  combining_rules.py  featurizers.py
