[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ilml"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
  "ilthermopy>=1.1.1.1",
  "joblib>=1.5.0",
  "numpy>=2.2.5",
  "pandas>=2.2.3",
  "rdkit>=2024.9.6",
  "tqdm>=4.67.1",
]

[tool.setuptools.dynamic]
version = { attr = "ilml.__version__" }

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "mypy>=1.15.0",
  "ruff>=0.11.8",
]

[tool.ruff]
extend-exclude = [
  ".ilml_cache/",
]

[tool.ruff.lint.isort]
required-imports = [
  "from __future__ import annotations",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
